...
    "city": "Vil",
    "commName": "Katye",
    "notes": "Nòt",
    "refresh": "Rafrechi",
    "error": "Erè",
    "success": "Siksè!",
    "ok": "Ok",
    "emptyForm": "Vide Fòm",
    "back": "Tounen",
    "pleaseTryAgain": "Tanpri eseye ankò",
    "loadMore": "Chaje plis",
    "settings": "Paramèt",
    "tryAgain": "Eseye ankò",
...
